[project]
name = "expert-echo-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pieter K de Villiers", email = "pieter@hey.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.117.1",
    "logfire>=4.10.0",
    "pydantic-ai>=0.8.1",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
    "gunicorn",
    "openai",
]

[project.scripts]
expert-echo-agents = "expert_echo_agents:main"

# [build-system]
# requires = ["uv_build>=0.8.22,<0.9.0"]
# build-backend = "uv_build"
